# haskell-modules

./: .ghci  Tests.hs  haskell-modules.cabal  refactor.cabal
src/Language/Haskell/Modules/: CPP.hs  Clean.hs  Danger.hs  Environment.hs  FGL.hs  Graphs.hs  IO.hs  Imports.hs  Info.hs  Orphans.hs  Parse.hs  Query.hs  Reify.hs  Render.hs  Split.hs  SrcLoc.hs  Utils.hs
src/Refactor/: CPP.hs  FGL.hs  Filter.hs  IO.hs  Imports.hs  Info.hs  Orphans.hs  Parse.hs  Reify.hs  Render.hs  Split.hs  SrcLoc.hs  Tests.hs  Utils.hs
tests/: Environment.hs  Main.hs  Query.hs
