Name: haskell-modules
Version: 1.0.1
Synopsis: Transformations on sets of Haskell modules
Description: Split and merge modules, rename symbols, clean import lists
Homepage: https://github.com/ddssff/refactor
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.16
Build-Type: Simple

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-options: -Wall -O2
  Build-Depends:
    base,
    Cabal,
    containers,
    cpphs,
    data-default,
    exceptions,
    fgl,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    hint,
    hse-cpp,
    HUnit,
    lens,
    mtl,
    optparse-applicative,
    pretty,
    show-please,
    syb,
    template-haskell,
    th-lift,
    th-orphans
  Exposed-Modules:
    Language.Haskell.Modules.CPP
    Language.Haskell.Modules.Danger
    Language.Haskell.Modules.FGL
    Language.Haskell.Modules.Imports
    Language.Haskell.Modules.Info
    Language.Haskell.Modules.IO
    Language.Haskell.Modules.Parse
    Language.Haskell.Modules.Orphans
    Language.Haskell.Modules.Query
    Language.Haskell.Modules.Reify
    Language.Haskell.Modules.Render
    Language.Haskell.Modules.Split
    Language.Haskell.Modules.SrcLoc
    Language.Haskell.Modules.Utils

Test-Suite haskell-modules-tests
  Default-Language: Haskell2010
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Main.hs
  Build-Depends:
    base,
    Cabal,
    cpphs,
    containers,
    contravariant,
    data-default,
    exceptions,
    fgl,
    filepath,
    haskell-modules,
    haskell-names,
    haskell-src-exts,
    hint,
    hse-cpp,
    HUnit,
    lens,
    mtl,
    optparse-applicative,
    pretty,
    show-please,
    syb,
    template-haskell,
    th-lift,
    th-orphans
