Name: refactor
Version: 1.0.1
Synopsis: Transformations on sets of Haskell modules
Description: Split and merge modules, rename symbols, clean import lists
Homepage: https://github.com/ddssff/refactor
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.16
Build-Type: Simple

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-options: -Wall -O2
  Build-Depends:
    base,
    Cabal,
    containers,
    cpphs,
    data-default,
    fgl,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    hint,
    hse-cpp,
    HUnit,
    lens,
    mtl,
    optparse-applicative,
    pretty,
    syb,
    template-haskell,
    th-lift,
    th-orphans
  Exposed-Modules:
    Refactor.CPP
    Refactor.FGL
    Refactor.Info
    Refactor.Parse
    Refactor.Orphans
    Refactor.Reify
    Refactor.Render
    Refactor.Split
    Refactor.SrcLoc
    Refactor.Utils

Test-Suite refactor-tests
  Default-Language: Haskell2010
  Type: exitcode-stdio-1.0
  Main-Is: Tests.hs
  Build-Depends:
    base,
    containers,
    data-default,
    fgl,
    haskell-names,
    haskell-src-exts,
    hint,
    HUnit,
    refactor,
    template-haskell,
    th-lift,
    th-orphans
