Name: refactor
Version: 1.0.1
Synopsis: Transformations on sets of Haskell modules
Description: Split and merge modules, rename symbols, clean import lists
Homepage: https://github.com/ddssff/refactor
License: BSD3
Author: David Fox
Maintainer: David Fox
Cabal-Version: >= 1.16
Build-Type: Simple

Library
  Default-Language: Haskell2010
  Hs-Source-Dirs: src
  GHC-options: -Wall -O2
  Build-Depends:
    base,
    Cabal,
    containers,
    cpphs,
    data-default,
    exceptions,
    fgl,
    filepath,
    haskell-names,
    haskell-src-exts >= 1.18,
    hint,
    hse-cpp,
    HUnit,
    lens,
    mtl,
    optparse-applicative,
    pretty,
    show-please,
    syb,
    template-haskell,
    th-lift,
    th-orphans
  Exposed-Modules:
    Refactor.CPP
    Refactor.FGL
    Refactor.Imports
    Refactor.Info
    Refactor.IO
    Refactor.Parse
    Refactor.Orphans
    Refactor.Reify
    Refactor.Render
    Refactor.Split
    Refactor.SrcLoc
    Refactor.Utils

Test-Suite refactor-tests
  Default-Language: Haskell2010
  Type: exitcode-stdio-1.0
  Hs-Source-Dirs: tests
  Main-Is: Main.hs
  Build-Depends:
    base,
    containers,
    contravariant,
    data-default,
    fgl,
    filepath,
    haskell-names,
    haskell-src-exts,
    hint,
    HUnit,
    lens,
    refactor,
    template-haskell,
    th-lift,
    th-orphans
